# ITKIMPACT

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  README.md  itk-module-init.cmake  itk-module.cmake  pyproject.toml
.github/workflows/: build-test-cxx.yml  build-test-package.yml  build-wheels.yml  clang-format-linter.yml
examples/: CMakeLists.txt  ImpactMetricExample.cxx  ImpactMetricExample.py
include/: ImpactLoss.h  itkImageToFeaturesMap.h  itkImageToFeaturesMap.hxx  itkImageToFeaturesMapInternals.h  itkImageToTensorFilter.h  itkImageToTensorFilter.hxx  itkImpactCoarseRegistration.h  itkImpactCoarseRegistration.hxx  itkImpactFineRegistration.h  itkImpactFineRegistration.hxx  itkImpactImageToImageMetricv4.h  itkImpactImageToImageMetricv4.hxx  itkImpactImageToImageMetricv4GetValueAndDerivativeThreader.h  itkImpactImageToImageMetricv4GetValueAndDerivativeThreader.hxx  itkImpactOnlineInference.h  itkImpactTorchRegistrationHelpers.h  itkInterpolateVectorImageFunction.h  itkInterpolateVectorImageFunction.hxx  itkModelConfiguration.h  itkModelConfigurationDetail.h  itkTensorToImageFilter.h  itkTensorToImageFilter.hxx
src/: CMakeLists.txt  itkModelConfiguration.cxx
test/: CMakeLists.txt  itkImageToFeaturesMapTest.cxx  itkImageToTensorFilterTest.cxx  itkImpactBackendGTest.cxx  itkImpactPythonTest.py  itkInterpolateVectorImageFunctionTest.cxx  itkTensorToImageFilterTest.cxx
test/Data/: GenerateImpactTestModels.py  ImpactToyModel.pt  ImpactToyModelDown.pt  M258_2_Layers.pt.sha512  README.md
wrapping/: CMakeLists.txt  itkImageToFeaturesMap.wrap  itkImpactCoarseRegistration.wrap  itkImpactFineRegistration.wrap  itkImpactImageToImageMetricv4.wrap  itkModelConfiguration.wrap
